--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:h2:mem:4fe879f5-8b07-475d-923d-ebef6fd73885
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
